loopdowhile.Poucet2.scala.error
Erreur de compilation :
Poucet2:17: error: 'while' expected but '}' found.
}
^